<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tiledstripes" >

    <LinearLayout  
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#9C9C9C"
            android:orientation="vertical">

         <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/titletwo"
                android:textSize="18sp"
                android:background="@drawable/bg_titlebutton"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="20dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginLeft="20dp"
                    android:textSize="20sp"
                    android:text="@string/gradeName" />

                <EditText
                    android:id="@+id/et_tag"
                    style="@style/push_tag"
                    android:hint="@string/gradeHint"
                    android:inputType="number"
                    android:layout_width="130dip"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:background="@android:drawable/edit_text"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/bt_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setGrade"
                    android:background="@drawable/bg_alibuybutton"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginLeft="20dp"
                    android:textSize="20sp"
                    android:text="@string/className" />

                <EditText
                    android:id="@+id/et_alias"
                    style="@style/push_alias"
                    android:layout_width="130dip"
                    android:hint="@string/classHint"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:background="@android:drawable/edit_text"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/bt_alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setClass"
                    android:background="@drawable/bg_alibuybutton"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:text="@string/setNote"/>

    </LinearLayout>

</ScrollView>